--- a/src/components/competitions/competitions.module.scss
+++ b/src/components/competitions/competitions.module.scss
@@ -1,4 +1,6 @@
 .CompetitionsComponent {
+  .contentTitle {
+  }
   .activeIcon {
     background: #4ab405;
     border-radius: 50%;
@@ -188,7 +190,6 @@
     @media screen and (max-width: 480px) {
       flex-direction: column-reverse;
     }
-
     p {
       margin-left: 10px;
     }
