--- a/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
+++ b/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    margin: 50px 20px;
+    margin: 20px;
     position: relative;
     border-radius: 20px;
     overflow: hidden;
@@ -133,7 +133,7 @@
             // background-image: url(https://t4.ftcdn.net/jpg/03/85/05/53/360_F_385055380_RnAWgJUqaJzqgh8i3aeleBFULJkLoVM6.jpg);
             // background-image: url(https://image.slidesdocs.com/responsive-images/background/purple-gradient-mosaic-character-wind-game-cartoon-powerpoint-background_7de580b73e__960_540.jpg);
             // background-size: cover;
-            // background-image: url(/images/backgrounds/tetris-texture.png);
+            // background-image: url(/images/backgrounds/general-bg.png);
             background-color: white;
             background-position: center;
             background-size: 320px;
