Ajustes transacciones y demas

--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -545,7 +545,7 @@ span.MuiBadge-badge {
 main {
   min-height: 100vh;
   &.App {
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
   }
