--- a/src/components/customHeader/custom_header.module.scss
+++ b/src/components/customHeader/custom_header.module.scss
@@ -6,7 +6,7 @@
   // border-bottom: 1px solid #dcdcdcb5;
   // border-bottom: 2px solid #1d1d1db5;
   max-width: 420px;
-  padding: 8px 0 8px;
+  padding: 6px 0 0px;
   position: fixed;
   text-align: center;
   top: 0;
@@ -17,7 +17,6 @@
   // border-bottom: 2px solid #3b0f6e;
 
   @media screen and (max-width: $tablet) {
-    padding: 10px 0 5px;
     position: fixed;
     top: 0;
     z-index: 5;
@@ -44,6 +43,7 @@
   > ul {
     margin: 0;
     padding: 0;
+    position: relative;
     @media screen and (max-width: $tablet) {
       // display: flex;
       // justify-content: space-between;
@@ -59,6 +59,21 @@
       font-size: 14px;
       font-weight: 600;
       margin: 0;
+    }
+    .beta {
+      background: #55acc4;
+      border-radius: 4px;
+      border: 1px #2c859d solid;
+      color: #19596b;
+      font-size: 12px;
+      font-weight: 600;
+      left: 180px;
+      margin: 0px auto 0px;
+      padding: 0 2px 1px;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      width: max-content;
     }
   }
 
