--- a/src/components/bonusList/bonusList.module.scss
+++ b/src/components/bonusList/bonusList.module.scss
@@ -5,11 +5,11 @@
         background-size: cover;
         box-shadow: inset 0px 0px 4px #ededed;
         border-radius: 8px;
-        height: 170px;
+        // height: 170px;
         position: relative;
         margin-bottom: 30px;
         &.withImage {
-            height: 200px;
+            // height: 200px;
         }
         .topMessage {
             display: flex;
@@ -40,13 +40,17 @@
         }
         .image img {
             display: block;
-            margin: 50px auto;
+            margin: 50px auto 0;
             width: 160px;
+        }
+        .price {
+            margin: 10px 0 10px;
         }
         .contentTexts {
             bottom: 20px;
             left: 20px;
-            position: absolute;
+            margin: 0 0 20px 20px;
+            // position: absolute;
             h2 {
                 color: white;
                 margin: 0 auto 0;
@@ -55,6 +59,11 @@
                 font-size: 14px;
                 margin: 0 auto 0;
             }
+        }
+        .actions {
+            display: flex;
+            justify-content: center;
+            margin: 0 0 10px;
         }
     }
 }
