Fix estilos bonos

--- a/src/components/ia/iacharacter.module.scss
+++ b/src/components/ia/iacharacter.module.scss
@@ -34,6 +34,10 @@
             animation: abrirCerrar 4s infinite;
             background-image: url("/images/ia/4.png");
         }
+        &.sad {
+            animation: abrirCerrar 4s infinite;
+            background-image: url("/images/ia/4.png");
+        }
         &.happy_2 {
             background-image: url("/images/ia/1.png");
         }
