Ajustes de animacion, ajuste perfil default name y back button cuando es paco

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -1,8 +1,6 @@
 .LoginComponent {
   .playButton {
-    position: fixed;
-    right: 10px;
-    top: 4px;
+    margin-top: 20px;
   }
   .contryAndPhone {
     display: flex;
