--- a/src/components/coinIcon/styles.module.scss
+++ b/src/components/coinIcon/styles.module.scss
@@ -40,7 +40,7 @@
     display: inline-block;
     font-weight: bold;
     height: 20px;
-    margin: 0 0 0 5px;
+    margin: 0 5px 0 5px;
     position: relative;
   }
 
