--- a/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
+++ b/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
@@ -32,7 +32,7 @@
         text-align: center;
         text-transform: uppercase;
         width: 200px;
-        transition: ease .2s;
+        transition: ease 0.2s;
         &:focus {
             background: #ffffffb5;
             border-radius: 10px;
@@ -242,7 +242,7 @@
         border-radius: 5px;
         box-shadow: inset 4px 5px 8px #29292900;
         height: 100%;
-        // overflow: hidden;
+        padding: 4px 0 2px;
         width: 100%;
         .indicator {
             background: linear-gradient(90deg, #74ffd0, #3ac8be);
@@ -253,14 +253,28 @@
             transition: 1s ease-in-out;
             transition-duration: 3s;
             width: 30%;
-            label {
-                border-radius: 10px 0 10px 0;
-                display: block;
-                font-size: 14px;
-                font-weight: 600;
-                text-align: center;
-                width: 160px;
-            }
+        }
+        label {
+            border-radius: 10px 0 10px 0;
+            display: block;
+            font-size: 14px;
+            font-weight: 600;
+            left: 0;
+            margin: 0 auto;
+            position: absolute;
+            right: 0;
+            text-align: center;
+            z-index: 1;
+
+            text-shadow:
+                2px 0 #2e2e2e,
+                -2px 0 #2e2e2e,
+                0 2px #2e2e2e,
+                0 -2px #2e2e2e,
+                1px 1px #2e2e2e,
+                -1px -1px #2e2e2e,
+                1px -1px #2e2e2e,
+                -1px 1px #2e2e2e;
         }
     }
 }
