Consumiendo servicio de referidos

--- a/src/components/customHeader/custom_header.module.scss
+++ b/src/components/customHeader/custom_header.module.scss
@@ -2,9 +2,10 @@
 
 #CustomHeader {
   // background: white;
-  background: #edeef2;
+  background: #ffffffeb;
   // border-bottom: 1px solid #dcdcdcb5;
   // border-bottom: 2px solid #1d1d1db5;
+  border-bottom: 2px solid #d7dae0;
   max-width: 420px;
   padding: 6px 0 0px;
   position: fixed;
