--- a/src/components/coinIcon/styles.module.scss
+++ b/src/components/coinIcon/styles.module.scss
@@ -24,13 +24,21 @@
     height: 31px;
     margin: 0 0 0 0px;
     position: relative;
-    transition: 0.5s linear;
+    // transition: 0.5s linear;
     width: 31px;
 
     // coin-v2
     background-size: 34px;
     height: 34px;
     width: 34px;
+    &:nth-of-type(2) {
+      right: 4px;
+    }
+    &:nth-of-type(3) {
+      position: relative;
+      right: 50px;
+      top: -25px;
+    }
   }
   .multicoin {
     margin-left: -10px;
