--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -934,7 +934,7 @@ svg.icon {
 a {
   color: $secundary-color;
   text-decoration: none;
-  &.underline {
+  &.text-ul {
     text-decoration: underline;
   }
 }
