--- a/src/components/referrals/referrals.module.scss
+++ b/src/components/referrals/referrals.module.scss
@@ -4,7 +4,7 @@
         margin-bottom: 12px;
         background: #07244c;
         border-radius: 10px;
-        padding: 0px 10px 14px;
+        padding: 10px 10px 14px;
         position: relative;
         :global(picture) {
             height: 50px;
@@ -15,13 +15,16 @@
             }
         }
         .contentName {
+            display: inline-block;
             margin: 0px 0px 0 20px;
             h3 {
                 font-weight: 600;
-                width: 80%;
+                margin: 0;
+                max-width: 70%;
             }
             .points {
-                font-weight: initial;
+                color: #6ef9ce;
+                font-weight: 600;
                 position: absolute;
                 right: 20px;
                 top: 30px;
