--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -169,6 +169,9 @@
         background: transparent;
       }
     }
+    &:global(.outline) {
+      border: 1px solid white;
+    }
   }
 
   &.green {
@@ -219,8 +222,8 @@
     font-family: "Montserrat", sans-serif;
     text-decoration: inherit;
     span {
+      height: calc(100% + 8px);
       top: -4px;
-      height: 32px;
     }
   }
   // Iconos dentro del botón
