--- a/src/components/customHeader/custom_header.module.scss
+++ b/src/components/customHeader/custom_header.module.scss
@@ -5,7 +5,7 @@
   background: #ffffffeb;
   // border-bottom: 1px solid #dcdcdcb5;
   // border-bottom: 2px solid #1d1d1db5;
-  border-bottom: 2px solid #d7dae0;
+  // border-bottom: 2px solid #d7dae0;
   max-width: 420px;
   padding: 6px 0 0px;
   position: fixed;
