--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -250,6 +250,10 @@ section.Onboarding {
           max-width: 170px;
           width: auto;
         }
+        &::-webkit-scrollbar-thumb {
+          background: linear-gradient(45deg, #ff416c, #ff4b2b); /* Degradado facherito */
+          border-radius: 5px;
+        }
         &::-webkit-scrollbar {
           width: 2px; /* Para vertical */
           height: 2px; /* Para horizontal */
@@ -258,6 +262,9 @@ section.Onboarding {
           background: #740e9f; /* Fondo oscuro */
           border-radius: 5px;
         }
+      }
+      .sellerDescription {
+        text-align: left;
       }
     }
   }
