--- a/src/components/referrals/referrals.module.scss
+++ b/src/components/referrals/referrals.module.scss
@@ -30,5 +30,10 @@
                 top: 30px;
             }
         }
+        .inviteButton {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+        }
     }
 }
