Cerrar menu boton estilos

--- a/src/components/previewUser/previewUser.module.scss
+++ b/src/components/previewUser/previewUser.module.scss
@@ -209,10 +209,11 @@
     }
   }
 
-  .close_button {
-    position: fixed;
-    right: 6px;
-    top: 6px;
+  .closeButton {
+    bottom: 60px;
+    left: 10px;
+    position: absolute;
+    top: initial;
   }
 
   // .elementToCloseBgBlack {
