--- a/src/components/userNotifications/userNotifications.module.scss
+++ b/src/components/userNotifications/userNotifications.module.scss
@@ -2,7 +2,7 @@
   // overflow-y: scroll;
   background: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 0 10px #52525233;
+  // box-shadow: 0px 0 10px #52525233;
   color: #585858;
   flex-direction: column;
   font-size: 14px;
