--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -20,7 +20,7 @@ section.Onboarding {
     .inputContent {
       position: relative;
       margin: 0 auto;
-      width: 200px;
+      width: 240px;
       input {
         background: #0e3267;
         border-bottom-right-radius: 0;
@@ -28,23 +28,27 @@ section.Onboarding {
         border: none !important;
         border-radius: 10px;
         color: white;
+        height: 22px;
         font-size: 16px;
         margin-top: 20px;
         padding: 10px;
         position: relative;
-        width: 200px;
+        width: 100%;
         z-index: 1;
+        &::placeholder {
+          color: white;
+        }
       }
       &::after {
         content: "";
         background: linear-gradient(83.23deg, #feb154 -6.32%, #d263ee 23.89%, #5d5af6 67.88%, #09e0a0 107.67%),
           linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
         border-radius: 10px;
-        height: 42px;
+        height: 50px;
         left: -2px;
         position: absolute;
         top: 18px;
-        width: 224px;
+        width: calc(100% + 24px);
       }
       .btnSend {
         // background-color: #eaeaea;
@@ -59,6 +63,9 @@ section.Onboarding {
           font-size: 18px;
           position: relative;
           top: 1px;
+        }
+        :global(button) {
+          padding: 7px 20px;
         }
       }
     }
@@ -122,8 +129,8 @@ section.Onboarding {
           max-height: initial !important;
           max-width: initial;
           position: relative;
-          top: 40px;
-          width: 120px !important;
+          top: -20px;
+          width: 80px;
         }
       }
       .html {
@@ -300,7 +307,7 @@ section.Onboarding {
   h2 {
     color: white;
     font-size: 24px;
-    margin: 0px 0 0 40px;
+    margin: 20px 0 0 40px;
     padding-top: 10px;
     position: relative;
     z-index: 2;
